2003-12-23 18:13  Alexander Malmberg <alexander@malmberg.org>

	* Source/NSWindow.m (-_handleWindowNeedsDisplay:): Disable flushing
	while displaying the window and flush after all displaying is done.

2003-12-06 14:03  Alexander Malmberg <alexander@malmberg.org>

	* Source/NSTextView.m (-readSelectionFromPasteboard:type:,
	NSTIFFPboardType): Send -setFileWrapper: to the attachment after
	setting the wrapper's icon to force an update of the attachment's
	image. Reported by Fabien Vallon.

2003-12-03 02:54  Alexander Malmberg <alexander@malmberg.org>

	* Source/GNUmakefile.postamble (after-clean): Add a missing ':'.
	Reported by Matt Rice.

2003-12-02  Adam Fedor  <fedor@gnu.org>

	* Source/GNUmakefile.postamble (libgnustep-gui.def): Generate at   
	compile time using the proper dependencies.

2003-12-01  Serg Stoyan <stoyan@on.com.ua>

	* Headers/AppKit/NSButton.h: Add setHighlightsBy: and 
	setShowsStateBy: methods.
	* Source/NSButton.m: Implement setHighlightsBy: and setShowsStateBy:
	methods
	
	* Source/NSPanel.m:
	Removed TODO about message font size.
	(-sendEvent:): Cast self when compared with iconWindow to omit
	compiler warning.
	(-_initWithoutGModel): Center title vertically relatively to image.
	Some comments added. Use NSButton's setHighlightsBy for default 
	button of altert panel.
	(-sizePanelToFit): Center message text horizontally.

	* Images/common_ret.tiff: Edit to be more NeXTish.
	* Images/common_retH.tiff: Ditto.

2003-11-29  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSWindow.m (+initialize) cache runloop modes. 
	(-_handleWindowNeedsDisplay:) and (-orderWindow:relativeTo:) use cached modes.

2003-11-29  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSCell.m (-setTitleWithMnemonic:) use [setTitle:] instead
	of [setStringValue:].
	(-mnemonic) use [title] instead of [stringValue].

2003-11-28  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSBezierPath.m (-bezierPathByReversingPath) return create
	path not self. 