@@ -84,8 +84,8 @@ main(int argc, char** argv, char **env_c)
 
   if (application)
     {
-// Don't start the application itself but use it for file opening. 
-//      [workspace launchApplication: application];
+      // Don't start the application itself but use it for file opening. 
+      //      [workspace launchApplication: application];
     }
   
   if (filetoopen)
